leader text cleanup

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="w-full max-w-xs bg-white/50 rounded-xl p-4 mb-4 border-2 border-pink-400">
                 <!-- Submit Screen (shown first when eligible) -->
                 <div id="submit-screen" style="display: none;">
-                    <h3 class="subtitle-garish text-2xl text-center mb-2" style="color:#ff69b4;">Submit Score</h3>
+                    <h3 class="subtitle-garish text-2xl text-center mb-2" style="color:#ff69b4; text-shadow: 2px 2px 0 #000;">Submit Score</h3>
                     <div class="flex flex-col gap-2">
                         <input type="text" id="player-name" placeholder="Your Name (Max 10)" maxlength="10" class="w-full text-center" style="border-color:#ff69b4;">
                         <button id="submit-score-btn" class="start-button py-2 text-xl bg-green-400 text-black hover:bg-green-300 uppercase">
