save to leaderboard screen slightly cleaned up

--- a/index.html
+++ b/index.html
@@ -95,8 +95,11 @@
                         <button id="submit-score-btn" class="start-button py-2 text-xl bg-green-400 text-black hover:bg-green-300 uppercase">
                             Save to Leaderboard!
                         </button>
-                        <button id="submit-skip-btn" class="mt-2 text-sm text-pink-600 hover:text-pink-800 underline">Skip &amp; View Leaderboard</button>
-                        <p id="submit-msg" class="text-sm font-bold text-pink-600 hidden"></p>
+
+                        <button id="submit-skip-btn" class="start-button py-2 text-xl bg-yellow-400 text-black hover:bg-yellow-300 uppercase">
+                            Skip &amp; View Leaderboard
+                        </button>
+
                     </div>
                 </div>
 
